clean up. styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1><a href="/">ggff.io</a></h1>
+    <span class="tagline">an ephemeral link shortener</span>
     <!--CONTENTS-->
   </body>
 </html>
