A bunch of improvements

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="index.css" />
+    <title>ggff.io</title>
+    <link rel="stylesheet" href="/index.css" />
   </head>
   <body>
     <h1><a href="/">ggff.io</a></h1>
-    <span class="tagline">an ephemeral link shortener</span>
+    <span class="tagline">ephemeral link shortener</span>
     <!--CONTENTS-->
   </body>
 </html>
