--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>ggff.io</title>
     <link rel="stylesheet" href="/index.css" />
+    <script src="/no-caps.js"></script>
   </head>
   <body>
     <h1><a href="/">ggff.io</a></h1>
